// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters - snapshots should render 2 female, 1 personal and 1 business filter chip 1`] = `
<div>
  <div
    class="MuiBox-root css-hlt1gb"
  >
    <div
      class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-aulpef-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
      >
        2 female
      </span>
    </div>
    <div
      class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-aulpef-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
      >
        1 business
      </span>
    </div>
    <div
      class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-aulpef-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
      >
        1 personal
      </span>
    </div>
  </div>
</div>
`;

exports[`Filters - snapshots should render nothing except wrapper 1`] = `
<div>
  <div
    class="MuiBox-root css-hlt1gb"
  />
</div>
`;

exports[`Filters - snapshots should render only 1 female and 1 personal filter chip 1`] = `
<div>
  <div
    class="MuiBox-root css-hlt1gb"
  >
    <div
      class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-aulpef-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
      >
        1 female
      </span>
    </div>
    <div
      class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-aulpef-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
      >
        1 personal
      </span>
    </div>
  </div>
</div>
`;
